# jtranslator

./: Cargo.toml
.vim/: coc-settings.json
lib/: error.rs  key_info.rs  lib.rs
src/: jtranslate.rs
