[package]
name = "Jtranslator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="translib"
path="lib/lib.rs"

[[bin]]
name = "jtranslate"
path = "src/jtranslate.rs"


[dependencies]
clap = { version = "4.5.20", features = ["derive", "cargo", "help", "env", "string"] }
error-stack = { version = "0.5.0", features = ["anyhow", "eyre", "serde"] }
jlogger-tracing = "0.1.4"
json = "0.12.4"
once_cell = "1.20.2"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full", "rt"] }
